# brainrot_generator

./: .gitignore  README.md  app.py  insta_display.py  mcp_client.py  pyproject.toml
frontend/: README.md  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.css  App.tsx
frontend/src/components/: CampaignComplete.tsx  DMFollowersForm.tsx  HighlightsSelector.tsx  JobStatusStream.tsx  StepContainer.tsx  URLSubmitForm.tsx  UploadReelsForm.tsx
frontend/src/lib/: api.ts  types.ts
